--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,13 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="../neos-pagination.js"></script>
 	<script type="text/javascript" src="../ng-neos-pagination.js"></script>
+	<style type="text/css">
+		li {
+		    display: inline-block;
+		}
+	</style>
 </head>
 <body>
-<h1>123</h1>
     <div ng-app="neosPaginationExampleApp">
         <div ng-controller="neosPaginationExampleController">
             <ng-neos-pagination></ng-neos-pagination>
