--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>cPages example</title>
+	<title>Neos Pagination example</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="../neos-pagination.js"></script>
@@ -21,7 +21,7 @@
     </div>
     <div>
         <div>
-            <neos-pagination page-object="pagesObj"></neos-pagination>
+            <neos-pagination data="data" page-object="pageObj" ></neos-pagination>
         </div>
     </div>
 </body>
